# scarecrow-drone

./: .gitignore  .gitmodules  CLAUDE.md  README.md  Start Scarecrow.bat - Shortcut.lnk  configure_indoor.py  health_check.py  launch.sh  pyproject.toml  requirements.txt
.claude/: settings.json
airframes/: 4022_gz_holybro_x500  4022_gz_holybro_x500.post  CLAUDE.md
config/: CLAUDE.md  server.config
design-system/: CLAUDE.md
design-system/scarecrow/: MASTER.md
docs/: CLAUDE.md
docs/implementation/: CLAUDE.md  MANUAL_SIM_CHECKLIST.md  README.md
models/: CLAUDE.md
models/ceiling_net/: model.config  model.sdf
models/holybro_x500/: CLAUDE.md  model.config  model.sdf
models/lidar_2d_v2/: CLAUDE.md  model.sdf
models/military_drone/: CLAUDE.md  model.config  model.sdf
models/mono_cam/: CLAUDE.md  model.sdf
models/mono_cam_hd/: model.config  model.sdf
models/pigeon_3d/: model.config  model.sdf
models/pigeon_billboard/: CLAUDE.md  model.config  model.sdf
models/tf_luna_up/: model.config  model.sdf
scarecrow/: CLAUDE.md  __init__.py  drone.py  logging_setup.py
scarecrow/controllers/: CLAUDE.md  (+7 more)
scripts/: CLAUDE.md  arm.py  env.sh  hover_test.py  launch.sh  sensor_demo.py  start_gz.sh  start_px4.sh  stream_camera.py  stream_camera_webrtc.py  test_cam.py
tests/: CLAUDE.md  conftest.py
webapp/: CLAUDE.md  Start Scarecrow Mac.sh  Start Scarecrow.bat  start.sh
worlds/: CLAUDE.md  default.sdf  drone_garage.sdf  drone_garage_pigeon_3d.sdf  hangar_1.sdf  hangar_1_wall_pursuit.sdf  hangar_lite.sdf  indoor_room.sdf  indoor_room_obstacles.sdf
(+211 files in other folders)
