[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scarecrow"
version = "0.1.0"
description = "Scarecrow Drone — GPS-denied indoor navigation"
requires-python = ">=3.10"
dependencies = [
    "mavsdk",
    "numpy",
]

[project.optional-dependencies]
sim = ["opencv-python-headless", "matplotlib", "pillow"]
hardware = ["rplidar-roboticia"]
webapp = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "aiofiles==25.1.0",
    "pydantic>=2.0",
]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["scarecrow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "webapp/backend"]
asyncio_mode = "auto"
